# supply-chain-analytics-engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
data/: inventory.csv  shipments.csv  suppliers.csv
demo/: benchmark.cpp  main.cpp
include/algorithms/: DemandSignal.h  EMAForecaster.h  HoltForecaster.h  IForecaster.h  SMAForecaster.h  SignalAwareForecaster.h
include/loader/: CSVLoader.h  JSONExporter.h
include/models/: Item.h  PlanningResult.h  Shipment.h  Supplier.h
include/planner/: BatchPlanner.h  EOQCalculator.h  InventoryPlanner.h  PlannerCache.h  PlannerPipeline.h  RiskScorer.h  SafetyStockCalculator.h
include/simulation/: DisruptionAnalyzer.h  ScenarioRunner.h  SimulationResult.h  SupplyChainSimulator.h
src/algorithms/: EMAForecaster.cpp  HoltForecaster.cpp  SMAForecaster.cpp  SignalAwareForecaster.cpp
src/loader/: CSVLoader.cpp  JSONExporter.cpp
src/planner/: BatchPlanner.cpp  EOQCalculator.cpp  InventoryPlanner.cpp  PlannerCache.cpp  PlannerPipeline.cpp  RiskScorer.cpp  SafetyStockCalculator.cpp
src/simulation/: DisruptionAnalyzer.cpp  ScenarioRunner.cpp  SupplyChainSimulator.cpp
tests/: CMakeLists.txt  test_cache.cpp  test_eoq.cpp  test_forecasters.cpp  test_holt.cpp  test_planner.cpp  test_risk_scorer.cpp  test_safety_stock.cpp  test_signals.cpp  test_simulation.cpp
